gitops/apps/base/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-patient-service
spec:
  podSelector:
    matchLabels:
      app: patient-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              purpose: networking
        - podSelector:
            matchLabels:
              app: clinical-service
      ports:
        - port: 8000
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - port: 443
        - port: 5432
        - port: 6380
    - to:
        - podSelector:
            matchLabels:
              app: notification-service
      ports:
        - port: 8002
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-clinical-service
spec:
  podSelector:
    matchLabels:
      app: clinical-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              purpose: networking
      ports:
        - port: 8001
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - port: 443
        - port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: patient-service
      ports:
        - port: 8000
    - to:
        - podSelector:
            matchLabels:
              app: notification-service
      ports:
        - port: 8002
